==> rusefi/rusefi/firmware/config/boards/hellen/cypress/OS/os/hal/ports/Cypress/LLD/SPIv2/hal_spi_lld.c <==
#include <string.h>
#include "hal.h"

void spi_lld_init(void) {
#if CYPRESS_SPI_USE_SPI0
	spiObjectInit(&SPID1);
	SPID1.spi = &(CYPRESS_SPI_SPI0_CHANNEL);
	memset(&SPID1.stcCsioIrqCb, 0, sizeof(SPID1.stcCsioIrqCb));
	SPID1.stcCsioIrqCb.pfnTxIrqCb = spi_lld_master_tx1_callback;
	SPID1.stcCsioIrqCb.pfnRxIrqCb = spi_lld_master_rx1_callback;
#endif
#if CYPRESS_SPI_USE_SPI1
	spiObjectInit(&SPID2);
	SPID2.spi = &(CYPRESS_SPI_SPI1_CHANNEL);
	memset(&SPID2.stcCsioIrqCb, 0, sizeof(SPID2.stcCsioIrqCb));
	SPID2.stcCsioIrqCb.pfnTxIrqCb = spi_lld_master_tx2_callback;
	SPID2.stcCsioIrqCb.pfnRxIrqCb = spi_lld_master_rx2_callback;
#endif
}

void spi_lld_start(SPIDriver *spip) {
  /* If in stopped state then enables the SPI and DMA clocks.*/
  if (spip->state == SPI_STOP) {

	spip->isMaster = (spip->config->cr1 & SPI_CR1_MSTR) != 0;
	spip->flags = 0;  // kLPSPI_MasterByteSwap;
	if (spip->config->circular)
		spip->flags |= SPI_CIRCULAR_FLAG;
	int pcsAlt = 0;
	//!!!!!!!!!!!!!!!!!!!!!!!!!!
	spip->stcCsioCsPin = -1; //spi_detectPCS(spip->isMaster, spip->config->ssport, spip->config->sspad, &pcsAlt);

	if (spip->stcCsioCsPin != (en_cs_pin_sel_t)-1) {
		// enable corresponding alt.mode for hardware PCS control
		palSetPadMode(spip->config->ssport, spip->config->sspad, PAL_MODE_ALTERNATE(pcsAlt));
		
		memset(&spip->stcCsioCsConfig, 0, sizeof(spip->stcCsioCsConfig));

    	spip->stcCsioCsConfig.enCsStartPin = spip->stcCsioCsPin;
    	spip->stcCsioCsConfig.enCsEndPin = spip->stcCsioCsPin;
    	spip->stcCsioCsConfig.enClkDiv = CsClkNoDiv;
    	spip->stcCsioCsConfig.bActiveHold = FALSE;
    	spip->stcCsioCsConfig.enLevel = CsLowActive;
		// todo: make it baudRate-dependent?
    	spip->stcCsioCsConfig.u8CsSetupDelayTime = 200u;
    	spip->stcCsioCsConfig.u8CsHoldDelayTime = 200u;
    	spip->stcCsioCsConfig.u16CsDeselectTime = 2000u;
    	
    	switch (spip->stcCsioCsPin) {
    	case CsPinScs0:
	    	spip->stcCsioCsConfig.bScs0En = TRUE;
	    	break;
    	case CsPinScs1:
	    	spip->stcCsioCsConfig.bScs1En = TRUE;
	    	break;
		case CsPinScs2:
	    	spip->stcCsioCsConfig.bScs2En = TRUE;
	    	break;
		case CsPinScs3:
    		spip->stcCsioCsConfig.bScs3En = TRUE;
    		break;
    	}
	} else if (spip->config->ssport != NULL) {
		spip->flags |= SPI_SOFTWARE_CS_FLAG;
		// software PCS control for non-standard pins
		palSetPadMode(spip->config->ssport, spip->config->sspad, /*PAL_MODE_OUTPUT_PUSHPULL*/PAL_MODE_OUTPUT_OPENDRAIN);
	}
	memset(&spip->stcMfsCsioCfg, 0, sizeof(spip->stcMfsCsioCfg));
	spip->stcMfsCsioCfg.enMsMode = (spip->isMaster) ? CsioMaster : CsioSlave;
    spip->stcMfsCsioCfg.enActMode = (spip->config->cr1 & SPI_CR1_CPHA) ? CsioActNormalMode : CsioActSpiMode;
    spip->stcMfsCsioCfg.bInvertClk = (spip->config->cr1 & SPI_CR1_CPOL) ? FALSE : TRUE;
	spip->stcMfsCsioCfg.u32BaudRate = spi_detectBaudRate(spip);
	spip->stcMfsCsioCfg.enDataLength = (spip->config->cr1 & SPI_CR1_DFF) ? CsioSixteenBits : CsioEightBits;
	spip->stcMfsCsioCfg.enBitDirection = (spip->config->cr1 & SPI_CR1_LSBFIRST) ? CsioDataLsbFirst : CsioDataMsbFirst;
	spip->stcMfsCsioCfg.enSyncWaitTime = CsioSyncWaitZero;
	spip->stcMfsCsioCfg.pstcFifoConfig = NULL;
	spip->stcMfsCsioCfg.pstcCsConfig = (spip->stcCsioCsPin != (en_cs_pin_sel_t)-1) ? &spip->stcCsioCsConfig : NULL;
	spip->stcMfsCsioCfg.pstcSerialTimer = NULL;
	spip->stcMfsCsioCfg.pstcIrqEn = NULL;
	spip->stcMfsCsioCfg.pstcIrqCb = &spip->stcCsioIrqCb;
	spip->stcMfsCsioCfg.bTouchNvic = TRUE;

   	en_result_t res = Mfs_Csio_Init(spip->spi, &spip->stcMfsCsioCfg);
   	
    //debugLog("***spi_detectPCS() = %d baud=%d res=%d\r\n", pcsIdx, spip->stcMfsCsioCfg.u32BaudRate, res);	//!!!!!!!!!!!!!!!!!!
    

   	osalDbgAssert(res == Ok, "SPI driver init failed");
  }
}

void spi_lld_stop(SPIDriver *spip) {
  /* If in ready state then disables the SPI clock.*/
  if (spip->state == SPI_READY) {
#if CYPRESS_SPI_USE_SPI0
    if (&SPID1 == spip) {
    	Mfs_Csio_DeInit(spip->spi, TRUE);
    }
#endif

#if CYPRESS_SPI_USE_SPI1
    if (&SPID2 == spip) {
    	Mfs_Csio_DeInit(spip->spi, TRUE);
    }
#endif
  }
}

void spi_lld_exchange(SPIDriver *spip, size_t n,
                      const void *txbuf, void *rxbuf) {
	spip->csioTxBuf = (uint8_t *)txbuf;
	spip->csioTxBufSize = (txbuf != NULL) ? n : 0;
	spip->csioSendCnt = 0;
	
	spip->csioRxBuf = (uint8_t *)rxbuf;
	spip->csioRxBufSize = (rxbuf != NULL) ? n : 0;
	spip->csioReceiveCnt = 0;
	
	if (txbuf != NULL) {
		/* Enable TX function of CSIO */
	    Mfs_Csio_EnableFunc(spip->spi, CsioTx);

		Mfs_Csio_SetCsTransferByteCount(spip->spi, spip->stcCsioCsPin, n);

	    /* Configure interrupt */
		Mfs_Csio_EnableIrq(spip->spi, CsioTxIrq);
	}
    
    if (rxbuf != NULL) {
		/* Enable RX function of CSIO */
	    Mfs_Csio_EnableFunc(spip->spi, CsioRx);
	    /* Configure interrupt */
	    Mfs_Csio_EnableIrq(spip->spi, CsioRxIrq);
	}
}
